--- a/My Solution/7 整数反转.md
+++ b/My Solution/7 整数反转.md
@@ -40,16 +40,16 @@ int的最大数INT_MAX是2147483647
 
 假设上一步的翻转数为res'，进行预判断：
 
-- $res'>214748364$ ，res一定会溢出
-- $res'=214748364$ ，需进一步判断最后一位加进来的数字也就是原数字的第一位，设为top。若top>7，res一定会溢出；否则，不会溢出。
-- $res'<214748364$，res不会溢出
+- res'>214748364，res一定会溢出
+- res'=214748364，需进一步判断最后一位加进来的数字也就是原数字的第一位，设为top。若top>7，res一定会溢出；否则，不会溢出。
+- res'<214748364，res不会溢出
 
 再考虑负数，和正数类似：
 
 int的最小数INT_MIN是-2147483648
-- $res'<-214748364$ ，res一定会溢出
-- $res'=-214748364$ ，需进一步判断最后一位加进来的数字也就是原数字的第一位，设为top。若top<-8，res一定会溢出；否则，不会溢出。
-- $res'>-214748364$，res不会溢出
+- res'<-214748364，res一定会溢出
+- res'=-214748364，需进一步判断最后一位加进来的数字也就是原数字的第一位，设为top。若top<-8，res一定会溢出；否则，不会溢出。
+- res'>-214748364，res不会溢出
 
 
 
@@ -62,13 +62,13 @@ class Solution {
 public:
     int reverse(int x) {
         int tmp,ans=0;
-		while(x!=0){
-			tmp=ans;
-			ans=ans*10+x%10;
-			if(ans/10!=tmp) return 0;//溢出后的值与预想中的值不会相同
-			x=x/10;
-		}
-		return ans;    
+        while(x!=0){
+            tmp=ans;
+            ans=ans*10+x%10;
+            if(ans/10!=tmp) return 0;//溢出后的值与预想中的值不会相同
+            x=x/10;
+        }
+        return ans;    
     }
 };
 ```
@@ -81,14 +81,14 @@ public:
 class Solution {
 public:
     int reverse(int x) {
-        int res=0;
-		while(x!=0){
-			if(res>214748364 || (res==214748364 && x%10>7)) return 0;
-			if(res<-214748364 || (res==-214748364 && x%10<-8)) return 0;
-			res=res*10+x%10;				
+        int res = 0;
+		while(x!=0){		
+            if(res>214748364 || (res==214748364 && x%10>7)) return 0;
+            if(res<-214748364 || (res==-214748364 && x%10<-8)) return 0;
+            res=res*10+x%10;
             x=x/10;
-		}	
-		return res;
+        }		
+        return res;
     }
 };
 ```
