--- a/My Solution/104 二叉树的最大深度.md
+++ b/My Solution/104 二叉树的最大深度.md
@@ -9,12 +9,14 @@
 示例：
 给定二叉树 [3,9,20,null,null,15,7]，
 
-​	3
-
+```
+	3
    / \
   9  20
      /  \
    15   7
+```
+
 返回它的最大深度 3 。
 
 来源：力扣（LeetCode）
@@ -23,7 +25,26 @@
 
 # 解题思路
 
-
+基础题
 
 # 代码
+
+```cpp
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    int maxDepth(TreeNode* root) {
+        if(!root) return 0;
+        return 1+max(maxDepth(root->left),maxDepth(root->right));
+    }
+};
+```
 
