--- a/My Solution/402 移掉K位数字.md
+++ b/My Solution/402 移掉K位数字.md
@@ -35,6 +35,8 @@ num 不会包含任何前导零。
 
 每次找出第一个降序序列的首位去掉即可
 
+利用栈维护单调性，降低时间复杂度
+
 # 代码
 
 ```cpp
@@ -57,4 +59,32 @@ public:
 ```
 
 单调栈优化：
+
+（这里用vector代替了stack）
+
+```c++
+class Solution {
+public:
+    string handle(string num){//去除前导0
+        int i=0;
+        while(num[i]=='0') i++;
+        if(i==num.size()) return "0";
+        return num.substr(i);
+    }
+    string removeKdigits(string num, int k) {
+        vector<char> stk;
+        for(auto &x:num){   
+            while(!stk.empty() && k && stk.back()>x){
+                stk.pop_back();
+                k--;
+            }
+            stk.push_back(x);
+        }
+        while(k--) stk.pop_back();
+        string res;
+        for(auto &x:stk) res+=x;
+        return handle(res);
+    }
+};
+```
 
